Trying to fix overflow scroll bug.

--- a/src/stylesheets/Lightbox.scss
+++ b/src/stylesheets/Lightbox.scss
@@ -3,11 +3,10 @@
   left: 0;
   top: 0;
   width: 100vw;
-  height: 100vh;
   min-height: 100vh;
   background-color: black;
-  overflow-y: auto;
   overscroll-behavior: contain;
+  overflow-y: auto;
   z-index: 5;
 }
 
